<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/textNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobilenum"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/groupsize"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/dateDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="16sp" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                />

            <TextView
                android:id="@+id/timeDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="16sp" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"
                android:calendarViewShown="false" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/areaID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/area"
                    android:textSize="16sp" />

                <RadioButton
                    android:id="@+id/smoke"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/smoke" />

                <RadioButton
                    android:id="@+id/nonsmoke"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nosmoke" />

            </LinearLayout>

            <TextView
                android:id="@+id/nameView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <TextView
                android:id="@+id/numView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mobilenum" />

            <TextView
                android:id="@+id/sizeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/groupsize" />

            <TextView
                android:id="@+id/dateView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <TextView
                android:id="@+id/timeView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time" />

            <TextView
                android:id="@+id/areaView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/area" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/reset" />

                <Button
                    android:id="@+id/buttonConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/confirm" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
